--- a/gb/23/1/1/n13897029.md
+++ b/gb/23/1/1/n13897029.md
@@ -1,52 +1,42 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大陆法轮功学员和家人及百姓恭祝李洪志大师新年好(22条)</h2>
-
 <h6></h6>
 <hr>
-	<p>【大纪元2022年12月31日讯】<br /><B>辽宁省丹东市一明真相世人恭祝慈悲伟大的李<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E5%B8%88.md#1">大师</a>新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-2212290852373451.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-2212290852373451--ss.jpg alt="" /></a><br /></center><br />辽宁丹东一明真相世人敬上<br /><B>黑龙江省佳木斯市西门里大法弟子及明真相的婆婆恭祝师父元旦快乐！感恩师尊慈悲救度！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-221230gkyxc_01.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-221230gkyxc_01--ss.jpg></a><br /></center><br /><B>北京市昌平区一大法弟子家人恭祝<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97.md#1">李洪志</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E5%B8%88.md#1">大师</a>新年快乐！</B><br />我妻子修大法二十四年了，邪党警察经常骚扰她，也老来问我妻子在干什么。今年邪党警察问我：“那些炼<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>的（学员）怎么样？”我说：“都好着呢！疫情期间身体都棒着呢！”邪党警察听完点点头，没再说什么，就走了。祝李大师新年快乐！<br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-221230hcdkl_01.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-221230hcdkl_01--ss.jpg></a><br /></center><br /><B>黑龙江省佳木斯江边明真相的世人恭祝师父元旦快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-221230rxoyl_01.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-221230rxoyl_01--ss.jpg></a><br /></center><br /><B>辽宁省大连市夫妻俩大法弟子携家人恭祝慈悲伟大的师尊元旦快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-2212280717453258.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-2212280717453258--ss.jpg alt="" /></a><br /></center><br />大连市夫妻俩大法弟子携明真相的家人敬上<br />二零二二年十二月二十八日<br /><B>湖北荆州洪湖市明白真相的世人恭祝李大师新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-2212280819433586.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-2212280819433586--ss.jpg alt="" /></a><br /></center><br />今年12月初，在我们毫无准备防范的情况下，我家五口都被传染上了病毒，出生三个月的小宝宝也被传染发高烧，整天大哭大闹，全家人心急如焚，宝宝这样烧下去还有命吗？只好向大法师父求救：请求法轮大法师父救救我家小宝宝，同时诚心默念“法轮大法好，真善忍好”。真没想到一晚上宝宝就这样安稳的睡了，到第二天宝宝一切正常。照样在床上欢快的玩耍，法轮大法太神奇了，在我们家也再次见证了大法的超常，这么好的功法，为什么要打压，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>错在哪？政府为什么要说谎把人骗，这样不正的政府能让它存在下去吗，老天是不会放过它的。<br />我们会永远支持善待法轮大法。永远记住：“法轮大法好，真善忍好”，在李大师的大法佛光普照下我们全家都很快的康复了。感恩李大师对我们家的救命之恩！<br />恭祝李大师新年快乐！<br />湖北荆州洪湖市明白真相的世人敬上<br />2022年12月28日<br /><B>辽宁沈阳大法弟子的家属恭祝李大师<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E5%B9%B4%E5%A5%BD.md#1">新年好</a>！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-2212281746308388.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-2212281746308388--ss.jpg alt="" /></a><br /></center><br />李大师<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E5%B9%B4%E5%A5%BD.md#1">新年好</a>！感恩李大师！大慈大悲！我家哥、姐、兄共23口人，真心念九字真言“法轮大法好，真善忍好”，灵丹妙药，平安走过劫难。<br />叩拜李大师！谢谢李大师！<br />大法弟子家属<br /><B>辽宁省丹东市一位八十四岁老人恭祝慈悲伟大的李大师新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-2212290852052370.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-2212290852052370--ss.jpg alt="" /></a><br /></center><br />丹东市八十四岁老人敬上<br /><B>河北省保定市蠡县明真相世人恭祝李大师新年快乐！</B><br />师父，弟子在讲真相中，经常遇到明真相世人让我转达他们对您的感恩。在这新年到来之际，弟子就代他们向您表达他们对您的问候，谢谢师父慈悲救度！<br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-29-2212290238179480.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-29-2212290238179480--ss.jpg></a><br /></center><br /><B>四川南充大法弟子明真相的家人恭祝尊敬的大法师父新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-28-2212250553049239.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-28-2212250553049239--ss.jpg></a><br /></center><br /><B>天津市宁河区全体大法弟子家属恭祝慈悲伟大的李大师新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-28-2212250331051907.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-28-2212250331051907--ss.jpg></a><br /></center><br /><B>明真相世人恭祝李大师新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-28-2212240024238071.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-28-2212240024238071--ss.jpg></a><br /></center><br /><B>昆明市东川区一大法弟子代全家和明真相的朋友恭祝慈悲伟大的师尊新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-28-2212270832577114.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-28-2212270832577114--ss.jpg></a><br /></center><br />恭祝慈悲伟大的师尊新年快乐！<br />昆明东川区一大法弟子代全家和明真相的朋友敬上<br /><B>山东枣庄大法弟子携未修炼的丈夫、孩子以及明真相的亲朋好友恭祝师尊新年好！</B><br /><B>河北省唐山市丰润区大法弟子家属恭祝李大师新年快乐！</B><br />在新的一年即将到来之际，我和家人祝李大师新年快乐！在此叩拜李大师！感谢李大师给我们带来这么好的大法，让我们明真相，知佛法。希望天下的百姓都能快快的明白真相，多多得救。法轮大法好、真善忍好。<br />大法弟子家属敬上<br /><B>天津市三人学法小组大法弟子恭祝慈悲伟大的师父元旦快乐！</B><br />师父好！慈悲伟大的师父好！<br />弟子们怀着无比感恩的心情恭祝师父元旦快乐！同时代表明真相的世人及大法弟子家人感恩大法师父的慈悲保护。大疫当前，在法轮大法的护佑下弟子们和家人渡过一个又一个难关，闯了过来。二零二三年新年伊始，弟子们再一次与家人深深的感恩大法师父的慈悲苦度。谢谢师父！<br />法轮大法好！真善忍好！<br />天津市三人学法小组大法弟子及家人敬上<br />2022年12月28日<br /><B>河北衡水大法弟子及路北大法弟子恭祝师尊新年快乐！</B><br />在2022年即将过去，2023年即将来临之际，弟子们恭祝慈悲伟大的师尊新年快乐！<br />在新冠病毒蔓延，几乎所有人都中招的情况下，弟子们仍坚持走出去救人。明白真相的生命都发自内心的说：谢谢！表达对大法和师尊的救度的感恩！弟子们叩拜师尊！<br />祝师尊新年快乐！<br />河北衡水大法弟子路北大法弟子敬上<br />二零二二年十二月二十八日<br /><B>四川省会理市一家三位明白真相的民众恭祝李大师新年快乐！</B><br />诚信法轮大法好，支持大法弟子。<br />感谢李大师救度之恩！赐给我家和睦和幸褔！<br />四川省会理市一家三位明白真相的民众恭祝<br />2022年12月29号<br /><B>河北省石家庄一大法弟子的家人恭祝李大师新年快乐！</B><br />感谢李大师慈悲保护！<br /><B>陕西省咸阳市礼泉县一家大法弟子及明真相的家人恭祝师尊元旦快乐！</B><br />感恩师尊的慈悲苦度！弟子们一定谨记师尊的教诲，在大法中归正自己，信师信法，兑现誓约，跟师父回家。<br />陕西省咸阳市礼泉县一家大法弟子敬上。<br /><B>广西梧州市龙圩区明真相世人恭祝李大师新年快乐！</B><br /><B>山东淄博周村一明真相世人恭祝慈悲的李大师元旦快乐！</B></p>
+	<p>【大纪元2022年12月31日讯】<br /><B>辽宁省丹东市一明真相世人恭祝慈悲伟大的李大师新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-2212290852373451.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-2212290852373451--ss.jpg alt="" /></a><br /></center><br />辽宁丹东一明真相世人敬上<br /><B>黑龙江省佳木斯市西门里大法弟子及明真相的婆婆恭祝师父元旦快乐！感恩师尊慈悲救度！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-221230gkyxc_01.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-221230gkyxc_01--ss.jpg></a><br /></center><br /><B>北京市昌平区一大法弟子家人恭祝李洪志大师新年快乐！</B><br />我妻子修大法二十四年了，邪党警察经常骚扰她，也老来问我妻子在干什么。今年邪党警察问我：“那些炼法轮功的（学员）怎么样？”我说：“都好着呢！疫情期间身体都棒着呢！”邪党警察听完点点头，没再说什么，就走了。祝李大师新年快乐！<br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-221230hcdkl_01.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-221230hcdkl_01--ss.jpg></a><br /></center><br /><B>黑龙江省佳木斯江边明真相的世人恭祝师父元旦快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-221230rxoyl_01.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-221230rxoyl_01--ss.jpg></a><br /></center><br /><B>辽宁省大连市夫妻俩大法弟子携家人恭祝慈悲伟大的师尊元旦快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-2212280717453258.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-2212280717453258--ss.jpg alt="" /></a><br /></center><br />大连市夫妻俩大法弟子携明真相的家人敬上<br />二零二二年十二月二十八日<br /><B>湖北荆州洪湖市明白真相的世人恭祝李大师新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-2212280819433586.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-2212280819433586--ss.jpg alt="" /></a><br /></center><br />今年12月初，在我们毫无准备防范的情况下，我家五口都被传染上了病毒，出生三个月的小宝宝也被传染发高烧，整天大哭大闹，全家人心急如焚，宝宝这样烧下去还有命吗？只好向大法师父求救：请求法轮大法师父救救我家小宝宝，同时诚心默念“法轮大法好，真善忍好”。真没想到一晚上宝宝就这样安稳的睡了，到第二天宝宝一切正常。照样在床上欢快的玩耍，法轮大法太神奇了，在我们家也再次见证了大法的超常，这么好的功法，为什么要打压，法轮功错在哪？政府为什么要说谎把人骗，这样不正的政府能让它存在下去吗，老天是不会放过它的。<br />我们会永远支持善待法轮大法。永远记住：“法轮大法好，真善忍好”，在李大师的大法佛光普照下我们全家都很快的康复了。感恩李大师对我们家的救命之恩！<br />恭祝李大师新年快乐！<br />湖北荆州洪湖市明白真相的世人敬上<br />2022年12月28日<br /><B>辽宁沈阳大法弟子的家属恭祝李大师新年好！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-2212281746308388.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-2212281746308388--ss.jpg alt="" /></a><br /></center><br />李大师新年好！感恩李大师！大慈大悲！我家哥、姐、兄共23口人，真心念九字真言“法轮大法好，真善忍好”，灵丹妙药，平安走过劫难。<br />叩拜李大师！谢谢李大师！<br />大法弟子家属<br /><B>辽宁省丹东市一位八十四岁老人恭祝慈悲伟大的李大师新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-30-2212290852052370.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-30-2212290852052370--ss.jpg alt="" /></a><br /></center><br />丹东市八十四岁老人敬上<br /><B>河北省保定市蠡县明真相世人恭祝李大师新年快乐！</B><br />师父，弟子在讲真相中，经常遇到明真相世人让我转达他们对您的感恩。在这新年到来之际，弟子就代他们向您表达他们对您的问候，谢谢师父慈悲救度！<br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-29-2212290238179480.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-29-2212290238179480--ss.jpg></a><br /></center><br /><B>四川南充大法弟子明真相的家人恭祝尊敬的大法师父新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-28-2212250553049239.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-28-2212250553049239--ss.jpg></a><br /></center><br /><B>天津市宁河区全体大法弟子家属恭祝慈悲伟大的李大师新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-28-2212250331051907.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-28-2212250331051907--ss.jpg></a><br /></center><br /><B>明真相世人恭祝李大师新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-28-2212240024238071.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-28-2212240024238071--ss.jpg></a><br /></center><br /><B>昆明市东川区一大法弟子代全家和明真相的朋友恭祝慈悲伟大的师尊新年快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2022-12-28-2212270832577114.jpg><img src=http://www.minghui.org/mh/article_images/2022-12-28-2212270832577114--ss.jpg></a><br /></center><br />恭祝慈悲伟大的师尊新年快乐！<br />昆明东川区一大法弟子代全家和明真相的朋友敬上<br /><B>山东枣庄大法弟子携未修炼的丈夫、孩子以及明真相的亲朋好友恭祝师尊新年好！</B><br /><B>河北省唐山市丰润区大法弟子家属恭祝李大师新年快乐！</B><br />在新的一年即将到来之际，我和家人祝李大师新年快乐！在此叩拜李大师！感谢李大师给我们带来这么好的大法，让我们明真相，知佛法。希望天下的百姓都能快快的明白真相，多多得救。法轮大法好、真善忍好。<br />大法弟子家属敬上<br /><B>天津市三人学法小组大法弟子恭祝慈悲伟大的师父元旦快乐！</B><br />师父好！慈悲伟大的师父好！<br />弟子们怀着无比感恩的心情恭祝师父元旦快乐！同时代表明真相的世人及大法弟子家人感恩大法师父的慈悲保护。大疫当前，在法轮大法的护佑下弟子们和家人渡过一个又一个难关，闯了过来。二零二三年新年伊始，弟子们再一次与家人深深的感恩大法师父的慈悲苦度。谢谢师父！<br />法轮大法好！真善忍好！<br />天津市三人学法小组大法弟子及家人敬上<br />2022年12月28日<br /><B>河北衡水大法弟子及路北大法弟子恭祝师尊新年快乐！</B><br />在2022年即将过去，2023年即将来临之际，弟子们恭祝慈悲伟大的师尊新年快乐！<br />在新冠病毒蔓延，几乎所有人都中招的情况下，弟子们仍坚持走出去救人。明白真相的生命都发自内心的说：谢谢！表达对大法和师尊的救度的感恩！弟子们叩拜师尊！<br />祝师尊新年快乐！<br />河北衡水大法弟子路北大法弟子敬上<br />二零二二年十二月二十八日<br /><B>四川省会理市一家三位明白真相的民众恭祝李大师新年快乐！</B><br />诚信法轮大法好，支持大法弟子。<br />感谢李大师救度之恩！赐给我家和睦和幸褔！<br />四川省会理市一家三位明白真相的民众恭祝<br />2022年12月29号<br /><B>河北省石家庄一大法弟子的家人恭祝李大师新年快乐！</B><br />感谢李大师慈悲保护！<br /><B>陕西省咸阳市礼泉县一家大法弟子及明真相的家人恭祝师尊元旦快乐！</B><br />感恩师尊的慈悲苦度！弟子们一定谨记师尊的教诲，在大法中归正自己，信师信法，兑现誓约，跟师父回家。<br />陕西省咸阳市礼泉县一家大法弟子敬上。<br /><B>广西梧州市龙圩区明真相世人恭祝李大师新年快乐！</B><br /><B>山东淄博周村一明真相世人恭祝慈悲的李大师元旦快乐！</B></p>
 <p><strong>本文转载自明慧网文章：<ahref=http://greetings.big5.minghui.org/mh/articles/2022/12/31/454180.md#1 target=_blank>大陆大法弟子和家人及百姓恭祝师尊新年好(22条)</a></strong></p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/12/27/n8638021.md#1">大陆各界民众向李洪志大师恭贺新年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/12/31/n8650934.md#1">善念得福报 大陆民众敬祝李洪志大师新年快乐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/1/1/n8654265.md#1">明真相世人恭祝李洪志大师新年好(29条)</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/1/1/n8654270.md#1">大法真相入人心　百姓恭祝李洪志大师新年快乐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/27/n8638021.md#1">大陆各界民众向李洪志大师恭贺新年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/31/n8650934.md#1">善念得福报 大陆民众敬祝李洪志大师新年快乐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/1/1/n8654265.md#1">明真相世人恭祝李洪志大师新年好(29条)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/1/1/n8654270.md#1">大法真相入人心　百姓恭祝李洪志大师新年快乐</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/23/n11539563.md#1" target="_blank">鸿路：最后的双十节</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/12/12/28/n3763495.md#1" target="_blank">洪愿：告诉你真实的法轮功（一）</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/2/n10015801.md#1" target="_blank">文武：中共篡政（一）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/22/n11674273.md#1" target="_blank">身心俱悴时喜遇大法 印度母亲人生现转机</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13891849.md#1">【未解之谜】预言家珍妮之一 肯尼迪家族的“诅咒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/22/n13889893.md#1">沁园春?贺神韵2023全球巡演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891107.md#1">出生七年才说话 轮回转生为一人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895617.md#1">【财商天下】病人一盒难求 Paxlovid 却成权贵礼品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895368.md#1">【财商天下】盘点2022十大事件 中国经济大倒退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895840.md#1">【远见快评】外交部曝染疫惨况 赵立坚不妙？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13893987.md#1">中共多名退役军官接连死亡 包括毛泽东警卫员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894498.md#1">网易视频“2022年的集体记忆”火爆网络</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13893955.md#1">传中共导弹专家李君龙染疫亡 知情者：震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13894733.md#1">黄安曝中国殡仪馆火化大排长龙 网民诉惨状</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893835.md#1">徐娇自嘲感染“炫饭株” 晒病照喊“被饿醒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894649.md#1">杨幂参股公司被爆欠债亿元 公司官方微博回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894614.md#1">站在路边突然倒下 台湾知名音乐人李惠群骤逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893867.md#1">陆知名声乐家潘乃宪病逝 儿子潘孟鸿证实死讯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894250.md#1">美国73岁男子以喷射客机为家 实现年少梦想</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893287.md#1">小狗能活多久？ 哪个品种的寿命最长？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893675.md#1">尿频影响睡眠 3种常见夜尿症及治疗方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894434.md#1">含维生素K1的绿叶蔬菜可降低晚年骨折风险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/12/n13883334.md#1">不再让酒精伤肝 养肝护肝全攻略</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/1/n13897029.htm">大陆法轮功学员和家人及百姓恭祝李洪志大师新年好(22条)</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897029.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/1/1/n13897029.htm">大陆法轮功学员和家人及百姓恭祝李洪志大师新年好(22条)</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/1/1/n13897029.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
